2024-Spring-NCKU-CompilerHW2/result/subtask06-if/testcase01.out
> Create symbol table (scope level 0)
func: main
> Insert `main` (addr: -1) to scope level 0
> Create symbol table (scope level 1)
> Insert `argv` (addr: 0) to scope level 1
/home/share/hw2/input/subtask06-if/testcase01.cpp:2:5: error:  syntax error
     2 |    int apple = 0;
       |    ^
Total lines: 2
